# Heimdall-Wake-On-Lan-ESP32

./: .clangd  .gitignore  .markdownlint.json  CHANGELOG.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.hardened.stealth
.github/workflows/: build.yml
components/dns_server/: dns_server.h
components/identity/: identity.c
components/mqtt_relay/: CMakeLists.txt  mqtt_relay.c
components/opsec/: CMakeLists.txt  opsec.c  opsec.h
components/portal/: Kconfig  portal.c
components/portal/portal_html/: index.html  login.html
components/portal/portal_html/new_login_html/: DESIGN.md  new_login
components/portal/portal_html/new_rebooting_html/: relay
components/portal/portal_html/new_secrets_html/: save
components/status_led/: CMakeLists.txt  Kconfig  status_led.c  status_led.h
components/storage/: storage.c  storage.h
components/wifi_sta/: CMakeLists.txt  wifi_sta.c
components/wol/: CMakeLists.txt  Kconfig  wol.c  wol.h
docs/: README.md  build_profiles.md  heimdall_feature_roadmap.md  index.html  manifest_hardened_stealth.json  pc_sleep_listener.md
experimental/: README.md
experimental/scripts/: sleep_listener.py
main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: ota_push.sh  setup.bat  setup.ps1  setup.sh
tests/opsec_test/: CMakeLists.txt
tests/opsec_test/components/opsec/: CMakeLists.txt
tests/storage_test/: CMakeLists.txt  sdkconfig.defaults
tests/storage_test/main/: CMakeLists.txt  test_storage.c
